# loki

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.agent.example.yaml  config.example.yaml  config.macro.example.yaml  config.role.example.md  justfile  models.yaml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: release.yaml
assets/: arena.html  playground.html
assets/agents/.shared/: utils.sh
assets/agents/code-reviewer/: config.yaml
assets/agents/coder/: README.md  config.yaml  tools.sh
assets/agents/explore/: README.md  config.yaml  tools.sh
assets/agents/file-reviewer/: config.yaml
assets/agents/jira-helper/: README.md  config.yaml  tools.sh
assets/agents/oracle/: README.md  config.yaml  tools.sh
assets/agents/sisyphus/: README.md  config.yaml  tools.sh
assets/agents/sql/: tools.sh
assets/functions/: mcp.json  tools.txt
assets/functions/scripts/: run-agent.py  run-agent.sh  run-tool.py  run-tool.sh
assets/functions/tools/: demo_py.py  execute_command.sh  execute_sql_code.sh  fs_cat.sh  fs_ls.sh  fs_mkdir.sh  fs_patch.sh  fs_rm.sh  fs_write.sh  get_current_weather.sh  query_jira_issues.sh  web_search_loki.sh
assets/functions/utils/: prompt-utils.sh
assets/roles/: code.md  functions.md  github.md  mcp-servers.md  repo-analyzer.md  shell.md  slack.md
deployment/homebrew/: loki.rb.template
docs/: AGENTS.md  AICHAT-MIGRATION.md  ENVIRONMENT-VARIABLES.md  MACROS.md  RAG.md  REPL-PROMPT.md  REPL.md  ROLES.md  SESSIONS.md  SHELL-INTEGRATIONS.md  THEMES.md  TODO-SYSTEM.md  VAULT.md
docs/clients/: CLIENTS.md  PATCHES.md
docs/function-calling/: BASH-PROMPT-HELPERS.md  CUSTOM-BASH-TOOLS.md  CUSTOM-TOOLS.md  MCP-SERVERS.md  TOOLS.md
scripts/: install_loki.ps1  install_loki.sh  update_models.py
scripts/shell-integration/: integration.bash  integration.elv  integration.fish  integration.nu  integration.ps1  integration.zsh
src/: cli.rs  function.rs  main.rs  serve.rs
src/cli/: completer.rs  mod.rs  secrets.rs
src/client/: access_token.rs  azure_openai.rs  bedrock.rs  claude.rs  claude_oauth.rs  cohere.rs  common.rs  gemini.rs  gemini_oauth.rs  macros.rs  message.rs  mod.rs  model.rs  oauth.rs  openai.rs  openai_compatible.rs  stream.rs  vertexai.rs
src/config/: agent.rs  input.rs  macros.rs  mod.rs  prompts.rs  role.rs  session.rs  todo.rs
src/function/: mod.rs  supervisor.rs  todo.rs  user_interaction.rs
src/mcp/: mod.rs
src/parsers/: bash.rs  mod.rs  python.rs
src/rag/: mod.rs  serde_vectors.rs
src/rag/splitter/: mod.rs
src/render/: inquire.rs  markdown.rs  mod.rs  stream.rs
src/repl/: completer.rs  mod.rs  prompt.rs
src/supervisor/: escalation.rs  mailbox.rs  mod.rs  taskqueue.rs
src/utils/: abort_signal.rs  clipboard.rs  command.rs  crypto.rs  html_to_md.rs  input.rs  loader.rs  logs.rs  mod.rs  native.rs  path.rs  render_prompt.rs  request.rs  spinner.rs
src/vault/: mod.rs  utils.rs
